add auto player

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </div>
 
     <div class="leaderboard" id="leaderboard">
-        <h2>🏆 分数排行榜</h2>
+        <h2>🏆 最近10局对战记录</h2>
         <div class="score-list" id="scoreList">
             <!-- 分数列表将在这里动态生成 -->
         </div>
